--- a/Trivia Quiz/Controller/Home/View/Storyboard/Home.storyboard
+++ b/Trivia Quiz/Controller/Home/View/Storyboard/Home.storyboard
@@ -237,6 +237,26 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Quq-lM-g8n" customClass="AppBaseLabel" customModule="Trivia_Quiz" customModuleProvider="target">
+                                <rect key="frame" x="331.66666666666669" y="104.33333333333333" width="15.333333333333314" height="29.333333333333329"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name="Quicksand-Regular" family="Quicksand" pointSize="25"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="labelFontType">
+                                        <integer key="value" value="6"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="bPX-8F-HP2">
+                                <rect key="frame" x="357" y="109.66666666666667" width="20" height="20.000000000000014"/>
+                                <color key="tintColor" systemColor="systemRedColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="23" id="6CI-ND-8Vh"/>
+                                    <constraint firstAttribute="width" constant="20" id="Ak2-3i-Lca"/>
+                                </constraints>
+                            </imageView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ooD-8y-bZJ">
                                 <rect key="frame" x="0.0" y="179" width="393" height="559"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -257,13 +277,17 @@
                         <color key="backgroundColor" name="AccentColor"/>
                         <constraints>
                             <constraint firstItem="ZKq-92-seC" firstAttribute="bottom" secondItem="ypv-rY-wYZ" secondAttribute="bottom" constant="10" id="2VV-UZ-TKj"/>
+                            <constraint firstItem="bPX-8F-HP2" firstAttribute="centerY" secondItem="Quq-lM-g8n" secondAttribute="centerY" id="2k8-as-NSq"/>
+                            <constraint firstItem="ZKq-92-seC" firstAttribute="trailing" secondItem="bPX-8F-HP2" secondAttribute="trailing" constant="16" id="Ega-YU-93D"/>
                             <constraint firstItem="1lR-fM-2au" firstAttribute="centerX" secondItem="j9o-qV-HyT" secondAttribute="centerX" id="Fip-Zp-bYf"/>
                             <constraint firstItem="ooD-8y-bZJ" firstAttribute="top" secondItem="1lR-fM-2au" secondAttribute="bottom" constant="10" id="QL1-Y2-ynA"/>
                             <constraint firstItem="ypv-rY-wYZ" firstAttribute="top" secondItem="ooD-8y-bZJ" secondAttribute="bottom" constant="10" id="SQN-2b-NFM"/>
                             <constraint firstAttribute="trailing" secondItem="ooD-8y-bZJ" secondAttribute="trailing" id="Yo7-RN-CMN"/>
                             <constraint firstItem="ypv-rY-wYZ" firstAttribute="leading" secondItem="j9o-qV-HyT" secondAttribute="leading" constant="16" id="cQb-xf-okB"/>
+                            <constraint firstItem="Quq-lM-g8n" firstAttribute="centerY" secondItem="1lR-fM-2au" secondAttribute="centerY" id="f5C-1x-2lC"/>
                             <constraint firstItem="1lR-fM-2au" firstAttribute="top" secondItem="ZKq-92-seC" secondAttribute="top" constant="10" id="gET-Ty-GYS"/>
                             <constraint firstItem="ooD-8y-bZJ" firstAttribute="leading" secondItem="j9o-qV-HyT" secondAttribute="leading" id="hkT-Wy-q8F"/>
+                            <constraint firstItem="bPX-8F-HP2" firstAttribute="leading" secondItem="Quq-lM-g8n" secondAttribute="trailing" constant="10" id="jnG-BW-VDK"/>
                             <constraint firstAttribute="trailing" secondItem="ypv-rY-wYZ" secondAttribute="trailing" constant="16" id="vqA-cx-0It"/>
                         </constraints>
                     </view>
@@ -271,24 +295,146 @@
                     <connections>
                         <outlet property="btnNext" destination="kv1-xh-PxC" id="owl-kV-RFw"/>
                         <outlet property="collectionOptions" destination="ooD-8y-bZJ" id="fpf-uF-UkX"/>
+                        <outlet property="lblAvalableGameLife" destination="Quq-lM-g8n" id="Gkd-bw-09M"/>
                         <outlet property="lblCurrentQuestion" destination="HrP-RV-eCP" id="Jz5-8e-VeN"/>
                         <outlet property="viewCounter" destination="1lR-fM-2au" id="EeU-Yw-m46"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xHn-W6-yjR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-44" y="3"/>
+            <point key="canvasLocation" x="-45.038167938931295" y="2.8169014084507045"/>
+        </scene>
+        <!--End GameVC-->
+        <scene sceneID="IBV-Us-6Tf">
+            <objects>
+                <viewController restorationIdentifier="EndGameVC" storyboardIdentifier="EndGameVC" id="bDz-ii-m9x" customClass="EndGameVC" customModule="Trivia_Quiz" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bGm-XD-MiT">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qke-LB-E13">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HNH-kU-fE5">
+                                <rect key="frame" x="50" y="468" width="293" height="300"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_score" translatesAutoresizingMaskIntoConstraints="NO" id="ylb-IS-pXY">
+                                        <rect key="frame" x="0.0" y="0.0" width="293" height="300"/>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="uSm-J8-TuT">
+                                        <rect key="frame" x="0.0" y="50.000000000000007" width="293" height="108.66666666666669"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Score " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tdw-qf-6O5" customClass="AppBaseLabel" customModule="Trivia_Quiz" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="293" height="54.333333333333336"/>
+                                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="50"/>
+                                                <color key="textColor" red="0.22622901200000001" green="0.17632243040000001" blue="0.56341916319999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="labelFontType">
+                                                        <integer key="value" value="8"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="color" keyPath="colorText">
+                                                        <color key="value" name="primaryBlue"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o40-nu-dIZ" customClass="AppBaseLabel" customModule="Trivia_Quiz" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="54.333333333333371" width="293" height="54.333333333333343"/>
+                                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="50"/>
+                                                <color key="textColor" red="0.22745098039215686" green="0.1764705882352941" blue="0.56470588235294117" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="labelFontType">
+                                                        <integer key="value" value="8"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="color" keyPath="colorText">
+                                                        <color key="value" name="primaryBlue"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="ylb-IS-pXY" firstAttribute="leading" secondItem="HNH-kU-fE5" secondAttribute="leading" id="3IQ-SG-sG5"/>
+                                    <constraint firstAttribute="trailing" secondItem="ylb-IS-pXY" secondAttribute="trailing" id="5Cs-vW-aZc"/>
+                                    <constraint firstAttribute="height" constant="300" id="93L-AR-2lp"/>
+                                    <constraint firstItem="ylb-IS-pXY" firstAttribute="top" secondItem="HNH-kU-fE5" secondAttribute="top" id="MEA-PV-Pnh"/>
+                                    <constraint firstItem="uSm-J8-TuT" firstAttribute="top" secondItem="HNH-kU-fE5" secondAttribute="top" constant="50" id="TSH-y4-Qy1"/>
+                                    <constraint firstAttribute="trailing" secondItem="uSm-J8-TuT" secondAttribute="trailing" id="cQA-zf-XbI"/>
+                                    <constraint firstItem="uSm-J8-TuT" firstAttribute="leading" secondItem="HNH-kU-fE5" secondAttribute="leading" id="ffb-P0-qCg"/>
+                                    <constraint firstAttribute="bottom" secondItem="ylb-IS-pXY" secondAttribute="bottom" id="hsh-oA-jDH"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="50"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YXW-9C-YXf">
+                                <rect key="frame" x="20" y="109" width="353" height="150"/>
+                                <color key="backgroundColor" red="0.22622901200000001" green="0.17632243040000001" blue="0.56341916319999996" alpha="0.28699933979999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="Z44-5d-7Id"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Papyrus" family="Papyrus" pointSize="50"/>
+                                <state key="normal" title=" Quiz" image="ic_restart">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="btnResetTapped:" destination="bDz-ii-m9x" eventType="touchUpInside" id="gJr-uY-2Ay"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="6sU-8h-keS"/>
+                        <color key="backgroundColor" name="AccentColor"/>
+                        <constraints>
+                            <constraint firstItem="HNH-kU-fE5" firstAttribute="leading" secondItem="6sU-8h-keS" secondAttribute="leading" constant="50" id="6Kv-ns-0K1"/>
+                            <constraint firstAttribute="trailing" secondItem="YXW-9C-YXf" secondAttribute="trailing" constant="20" id="8Qs-c5-pNn"/>
+                            <constraint firstItem="qke-LB-E13" firstAttribute="leading" secondItem="bGm-XD-MiT" secondAttribute="leading" id="I61-eW-3Q0"/>
+                            <constraint firstItem="YXW-9C-YXf" firstAttribute="top" secondItem="6sU-8h-keS" secondAttribute="top" constant="50" id="Kxi-kI-noX"/>
+                            <constraint firstItem="6sU-8h-keS" firstAttribute="bottom" secondItem="HNH-kU-fE5" secondAttribute="bottom" constant="50" id="Z9c-lQ-eqg"/>
+                            <constraint firstItem="qke-LB-E13" firstAttribute="top" secondItem="bGm-XD-MiT" secondAttribute="top" id="Zhv-9u-VPU"/>
+                            <constraint firstItem="YXW-9C-YXf" firstAttribute="leading" secondItem="bGm-XD-MiT" secondAttribute="leading" constant="20" id="cZk-SU-lZP"/>
+                            <constraint firstItem="6sU-8h-keS" firstAttribute="trailing" secondItem="HNH-kU-fE5" secondAttribute="trailing" constant="50" id="jaE-Le-QZf"/>
+                            <constraint firstAttribute="bottom" secondItem="qke-LB-E13" secondAttribute="bottom" id="ph5-jy-MRb"/>
+                            <constraint firstItem="HNH-kU-fE5" firstAttribute="centerX" secondItem="bGm-XD-MiT" secondAttribute="centerX" id="u4D-HL-4hw"/>
+                            <constraint firstAttribute="trailing" secondItem="qke-LB-E13" secondAttribute="trailing" id="y7t-I4-O0u"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="lblScore" destination="o40-nu-dIZ" id="rPe-HO-TiX"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="whU-Ew-RJm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="754.96183206106866" y="-14.084507042253522"/>
         </scene>
     </scenes>
     <resources>
+        <image name="heart.fill" catalog="system" width="128" height="107"/>
         <image name="i_easy" width="75" height="75"/>
         <image name="ic_hard" width="75" height="75"/>
         <image name="ic_medium" width="75" height="75"/>
+        <image name="ic_restart" width="126" height="126"/>
+        <image name="icon_score" width="258" height="195"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="primaryBlue">
+            <color red="0.22699999809265137" green="0.17599999904632568" blue="0.56499999761581421" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemPurpleColor">
             <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
